# AudioBench

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  compressed_manifest.txt
bin_compressed/: lattice_tcditugenmeetpackhref_ls2_nl60_lr12_bs2048_learn.005_ep2400_train1_7_raw.tflite.zst  libsvm_nu_svr_model.txt.zst  onnxruntime_providers_shared.dll.zst  sig_bak_ovr.onnx.zst  visqol.zst
docs/superpowers/plans/: 2026-06-17-dnsmos-integration.md
docs/superpowers/specs/: 2026-06-17-dnsmos-integration-design.md  2026-06-17-time-warping-detection-design.md
scripts/: build_release.bat  build_visqol.ps1  compress_assets.ps1  compress_assets.py
src/: alignment.rs  alignment_v2.rs  alignment_v3.rs  audio_io.rs  decompress.rs  dnsmos.rs  dtw.rs  gammatone.rs  html_report.rs  main.rs  metrics.rs  quality.rs  report.rs  spectrogram.rs  time_warping.rs  visqol.rs
