[package]
build = "build.rs"
name = "audio_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
# WAV 音频解码
hound = "3.5"
rustfft = "6.4.1"
# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DNSMOS ONNX 推理 - 仅 Windows 启用完整功能
[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "api-24", "std", "load-dynamic"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
